Fix footer overflow-x issue in certain browsers

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -8,6 +8,8 @@ footer {
 	background-color: #404040;
 	color: var(--col-accent-dark);
 	font-size: 0.9em;
+	overflow-x: clip;
+	overflow-y: visible;
 }
 
 #footer-content {
